--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -36,7 +36,10 @@
       <div class="row">
         <div class="col-sm-12 d-flex justify-content-center">
           <p>Current weather: <span id="currWeather"></span></p>
-          <button onclick="updateWeather()">Update</button>
+        </div>
+        <div class="col-sm-12 d-flex justify-content-center">
+          <button onclick="updateWeather(true)">Update (F)</button>
+          <button onclick="updateWeather(false)">Update (C)</button>
         </div>
       </div>
     </div>
