Fixed High Contrast

--- a/views/Customer.ejs
+++ b/views/Customer.ejs
@@ -224,7 +224,7 @@
 
             function contrast() {
                 var sheet = document.getElementById('mainStyleSheet');
-                sheet.setAttribute('href', 'CustomerContrast.css');
+                sheet.setAttribute('href', './styles/CustomerContrast.css');
             }
 
             const speakButton = document.getElementById('speakButton');
