--- a/views/Customer.ejs
+++ b/views/Customer.ejs
@@ -116,18 +116,122 @@
             </div>
             <div id="section2">
                 <h2>Get Fit Blends</h2>
-
+                <% catItems_2.forEach(function(item){ %>
+                    <div class="row center-row">
+                        <div class="col-sm-10" id="menuItem1">
+                            <h3><%= item.name %></h3>
+                            <!-- ADD DYNAMIC POPULATION FOR INGREDIENTS -->
+                            <p><%= item.ingredients %></p>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" data-toggle="modal" data-target="#modalSizeSelection" data-backdrop="false" data-itemname="Item 1">+</button>
+                            </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" id="speakButton" data-itemname="menuItem1"><i class="gg-volume"></i></button>
+                                <!--
+                                ASK FOR EXTRAS INSIDE OF SIZE MODAL
+                                EXTRA DROPDOWN WITH SELECTIONS
+                                CHECK FOR ACTIVE SELECTIONS
+                                FIX SHOPPING CART MODAL WHEN IN
+                                HIGH CONTRAST MODE
+                                SAME FOR THE SIZE SELECTOR
+                                -->
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
             <div id="section3">
                 <h2>Manage Weight Blends</h2>
-
+                <% catItems_3.forEach(function(item){ %>
+                    <div class="row center-row">
+                        <div class="col-sm-10" id="menuItem1">
+                            <h3><%= item.name %></h3>
+                            <!-- ADD DYNAMIC POPULATION FOR INGREDIENTS -->
+                            <p><%= item.ingredients %></p>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" data-toggle="modal" data-target="#modalSizeSelection" data-backdrop="false" data-itemname="Item 1">+</button>
+                            </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" id="speakButton" data-itemname="menuItem1"><i class="gg-volume"></i></button>
+                                <!--
+                                ASK FOR EXTRAS INSIDE OF SIZE MODAL
+                                EXTRA DROPDOWN WITH SELECTIONS
+                                CHECK FOR ACTIVE SELECTIONS
+                                FIX SHOPPING CART MODAL WHEN IN
+                                HIGH CONTRAST MODE
+                                SAME FOR THE SIZE SELECTOR
+                                -->
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
             </div>
             <div id="section4">
                 <h2>Be Well Blends</h2>
-
+                <% catItems_4.forEach(function(item){ %>
+                    <div class="row center-row">
+                        <div class="col-sm-10" id="menuItem1">
+                            <h3><%= item.name %></h3>
+                            <!-- ADD DYNAMIC POPULATION FOR INGREDIENTS -->
+                            <p><%= item.ingredients %></p>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" data-toggle="modal" data-target="#modalSizeSelection" data-backdrop="false" data-itemname="Item 1">+</button>
+                            </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" id="speakButton" data-itemname="menuItem1"><i class="gg-volume"></i></button>
+                                <!--
+                                ASK FOR EXTRAS INSIDE OF SIZE MODAL
+                                EXTRA DROPDOWN WITH SELECTIONS
+                                CHECK FOR ACTIVE SELECTIONS
+                                FIX SHOPPING CART MODAL WHEN IN
+                                HIGH CONTRAST MODE
+                                SAME FOR THE SIZE SELECTOR
+                                -->
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
             </div>
             <div id="section5">
                 <h2>Enjoy a Treat Blends</h2>
-
+                <% catItems_5.forEach(function(item){ %>
+                    <div class="row center-row">
+                        <div class="col-sm-10" id="menuItem1">
+                            <h3><%= item.name %></h3>
+                            <!-- ADD DYNAMIC POPULATION FOR INGREDIENTS -->
+                            <p><%= item.ingredients %></p>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" data-toggle="modal" data-target="#modalSizeSelection" data-backdrop="false" data-itemname="Item 1">+</button>
+                            </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" id="speakButton" data-itemname="menuItem1"><i class="gg-volume"></i></button>
+                                <!--
+                                ASK FOR EXTRAS INSIDE OF SIZE MODAL
+                                EXTRA DROPDOWN WITH SELECTIONS
+                                CHECK FOR ACTIVE SELECTIONS
+                                FIX SHOPPING CART MODAL WHEN IN
+                                HIGH CONTRAST MODE
+                                SAME FOR THE SIZE SELECTOR
+                                -->
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
             </div>
             <div id="section6">
                 <h2>Extras</h2>
