--- a/views/Customer.ejs
+++ b/views/Customer.ejs
@@ -236,7 +236,31 @@
             </div>
             <div id="section6">
                 <h2>Extras</h2>
-
+                <% exItems.forEach(function(item){ %>
+                    <div class="row center-row">
+                        <div class="col-sm-10" id="menuItem1">
+                            <h3><%= item %></h3>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" data-toggle="modal" data-target="#modalSizeSelection" data-backdrop="false" data-itemname="Item 1">+</button>
+                            </div>
+                        </div>
+                        <div class="col-sm-1">
+                            <div class="row">
+                                <button type="button" class="btn menu-btn" id="speakButton" data-itemname="menuItem1"><i class="gg-volume"></i></button>
+                                <!--
+                                ASK FOR EXTRAS INSIDE OF SIZE MODAL
+                                EXTRA DROPDOWN WITH SELECTIONS
+                                CHECK FOR ACTIVE SELECTIONS
+                                FIX SHOPPING CART MODAL WHEN IN
+                                HIGH CONTRAST MODE
+                                SAME FOR THE SIZE SELECTOR
+                                -->
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
             </div>
         </div>
         <script>
