--- a/views/Menu.ejs
+++ b/views/Menu.ejs
@@ -23,10 +23,11 @@
             -->
             <div class="container">
               <!-- ITEM TEMPLATE -->
+              <% catItems_1.forEach(function(item){ %>
               <div class="row center-row">
                 <div class="col-sm-10">
-                  <h3> Item 1 </h3>
-                  <p>Ingredients for Item 1</p>
+                  <h3><%= item.name %></h3>
+                  <p><%= item.ingredients %></p>
                 </div>
                 <div class="col-sm-2">
                   <div class="row">
@@ -34,6 +35,7 @@
                   </div>
                 </div>
               </div>
+              <% }) %>
               <!-- END OF TEMPLATE -->
             </div>
           </div>
@@ -41,10 +43,11 @@
             <h2>Get Fit Blends</h2>
             <div class="container">
               <!-- ITEM TEMPLATE -->
+              <% catItems_2.forEach(function(item){ %>
               <div class="row center-row">
                 <div class="col-sm-10">
-                  <h3> Item 1 </h3>
-                  <p>Ingredients for Item 1</p>
+                  <h3><%= item.name %></h3>
+                  <p><%= item.ingredients %></p>
                 </div>
                 <div class="col-sm-2">
                   <div class="row">
@@ -52,6 +55,7 @@
                   </div>
                 </div>
               </div>
+              <% }) %>
               <!-- END OF TEMPLATE -->
             </div>
           </div>
@@ -61,10 +65,11 @@
             <h2>Manage Weight Blends</h2>
             <div class="container">
               <!-- ITEM TEMPLATE -->
+              <% catItems_3.forEach(function(item){ %>
               <div class="row center-row">
                 <div class="col-sm-10">
-                  <h3> Item 1 </h3>
-                  <p>Ingredients for Item 1</p>
+                  <h3><%= item.name %></h3>
+                  <p><%= item.ingredients %></p>
                 </div>
                 <div class="col-sm-2">
                   <div class="row">
@@ -72,6 +77,7 @@
                   </div>
                 </div>
               </div>
+              <% }) %>
               <!-- END OF TEMPLATE -->
             </div>
           </div>
@@ -79,10 +85,11 @@
             <h2>Be Well Blends</h2>
             <div class="container">
               <!-- ITEM TEMPLATE -->
+              <% catItems_4.forEach(function(item){ %>
               <div class="row center-row">
                 <div class="col-sm-10">
-                  <h3> Item 1 </h3>
-                  <p>Ingredients for Item 1</p>
+                  <h3><%= item.name %></h3>
+                  <p><%= item.ingredients %></p>
                 </div>
                 <div class="col-sm-2">
                   <div class="row">
@@ -90,6 +97,7 @@
                   </div>
                 </div>
               </div>
+              <% }) %>
               <!-- END OF TEMPLATE -->
             </div>
           </div>
@@ -99,10 +107,11 @@
             <h2>Enjoy a Treat Blends</h2>
             <div class="container">
               <!-- ITEM TEMPLATE -->
+              <% catItems_5.forEach(function(item){ %>
               <div class="row center-row">
                 <div class="col-sm-10">
-                  <h3> Item 1 </h3>
-                  <p>Ingredients for Item 1</p>
+                  <h3><%= item.name %></h3>
+                  <p><%= item.ingredients %></p>
                 </div>
                 <div class="col-sm-2">
                   <div class="row">
@@ -110,6 +119,7 @@
                   </div>
                 </div>
               </div>
+              <% }) %>
               <!-- END OF TEMPLATE -->
             </div>
           </div>
